--- a/index.html
+++ b/index.html
@@ -8,35 +8,72 @@
     </head>
 
     <body>
-
-    <div class="superior">
-        <div class="recta">
-            <div clas="tabla">a</div>
-            <div clas="tabla">a</div>
-            <div clas="tabla">a</div>
-            <div clas="tabla">a</div>
-            <div clas="tabla">a</div>
+    <div class="container">
+        <div class="superior">
+            <div class="recta">
+                <div clas="tabla">a</div>
+                <div clas="tabla">a</div>
+                <div clas="tabla">a</div>
+            </div>
         </div>
-    </div>
 
-    <div class="recuadro">
+        <div class="recuadro">
 
-        <div class="box">inicio</div>
-        <div class="box">pokedex</div>
-        <div class="box">videojuegos y aplicaciones</div>
-        <div class="box">Juego de cartas</div>
-        <div class="box">Dibujos animados</div>
-        <div class="box">eventos de play!pokemon</div>
-        <div class="box">Noticias</div>
+            <div class="box">inicio</div>
+            <div class="box">pokedex <img src="Imagenes/Sense títol.png" height="20px" width="20px"></div>
+            <div class="box">videojuegos y aplicaciones</div>
+            <div class="box">Juego de cartas</div>
+            <div class="box">Dibujos animados</div>
+            <div class="box">eventos de play!pokemon</div>
+            <div class="box">Noticias</div>
 
-    </div>
+        </div>
 
-    <div class="largo-izq"></div>
-    <div class="largo-der"></div>
+        <div class="largo-izq"></div>
+        <div class="largo-der"></div>
 
-    <div class="informacion1">
-        <div class="a1"></div>
-    </div>
+        <div class="informacion1">
+            <img src="Imagenes/jan_11_video.jpg" width="350px" height="300px">
+            <div class="a1">
+                <h3>Tu aventura en El tesoro oculto del Área cero aún no ha terminado</h3>
+                <p>No te pierdas el nuevo tráiler para conocer más detalles sobre la Baya Meloc Singular y el epílogo de El tesoro del Área Cero para Pokémon Escarlata o Pokémon Púrpura.</p> 
+            </div>
+        </div>
+
+        <div class="informacion2">
+            <img src="Imagenes/sv05-banner.png" width="250px"  height="150px">
+            <div class="a2">
+
+            </div>
+        </div>
+
+        <div class="informacion3">
+            <img src="">
+            <div class="a3">
+
+            </div>
+        </div>
+
+        <div class="informacion4">
+            <img src="">
+            <div class="a4">
+
+            </div>
+        </div>
+
+        <div class="informacion5">
+            <div class="a5">
+
+            </div>
+        </div>
+
+        <div class="informacion6">
+            <img src="Imagenes/mabosstiff-ex-box-169-es.png" height="150px" width="300px">
+            <div class="a6">
+                <h3>Colecciona como un jefazo... con Mabosstiff ex</h3>
+            </div>
+        </div>
+
 
 
 
