--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </div>
 
         <div class="informacion5">
+            <img src="Imagenes/pokemon-sleep-169.png">
             <div class="a5">
 
             </div>
@@ -70,7 +71,7 @@
         <div class="informacion6">
             <img src="Imagenes/mabosstiff-ex-box-169-es.png" height="150px" width="300px">
             <div class="a6">
-                <h3>Colecciona como un jefazo... con Mabosstiff ex</h3>
+                <h3>Colecciona como un jefazo.... con Mabosstiff ex</h3>
             </div>
         </div>
 
