--- a/index.html
+++ b/index.html
@@ -8,106 +8,146 @@
     </head>
 
     <body>
-    <div class="container">
-        <div class="superior">
-            <div class="recta">
-                <div clas="tabla">a</div>
-                <div clas="tabla">a</div>
-                <div clas="tabla">a</div>
+        <div class="container">
+            <div class="superior">
+                <div class="recta">
+                    <div clas="tabla">a</div>
+                    <div clas="tabla">a</div>
+                    <div clas="tabla">a</div>
+                </div>
             </div>
-        </div>
 
-        <div class="recuadro">
+            <div class="recuadro">
 
-            <div class="box">inicio</div>
-            <div class="box">pokedex <img src="Imagenes/Sense títol.png" height="20px" width="20px"></div>
-            <div class="box">videojuegos y aplicaciones</div>
-            <div class="box">Juego de cartas</div>
-            <div class="box">Dibujos animados</div>
-            <div class="box">eventos de play!pokemon</div>
-            <div class="box">Noticias</div>
-
-        </div>
-
-        <div class="largo-izq"></div>
-        <div class="largo-der"></div>
-
-        <div class="informacion1">
-            <img src="Imagenes/jan_11_video.jpg" width="350px" height="300px">
-            <div class="a1">
-                <h3>Tu aventura en El tesoro oculto del Área cero aún no ha terminado</h3>
-                <p>No te pierdas el nuevo tráiler para conocer más detalles sobre la Baya Meloc Singular y el epílogo de El tesoro del Área Cero para Pokémon Escarlata o Pokémon Púrpura.</p> 
-            </div>
-        </div>
-
-        <div class="informacion2">
-            <img src="Imagenes/sv05-banner.png" width="250px"  height="150px">
-            <div class="a2">
+                <div class="box">inicio</div>
+                <div class="box">pokedex <img src="Imagenes/Sense títol.png" height="20px" width="20px"></div>
+                <div class="box">videojuegos y aplicaciones</div>
+                <div class="box">Juego de cartas</div>
+                <div class="box">Dibujos animados</div>
+                <div class="box">eventos de play!pokemon</div>
+                <div class="box">Noticias</div>
 
             </div>
-        </div>
 
-        <div class="informacion3">
-            <img src="">
-            <div class="a3">
+            <div class="largo-izq"></div>
+            <div class="largo-der"></div>
+
+            <div class="informacion1">
+                <img src="Imagenes/jan_11_video.jpg" width="350px" height="300px">
+                <div class="a1">
+                    <h3>Tu aventura en El tesoro oculto del Área cero aún no ha terminado</h3>
+                    <p>No te pierdas el nuevo tráiler para conocer más detalles sobre la Baya Meloc Singular y el epílogo de El tesoro del Área Cero para Pokémon Escarlata o Pokémon Púrpura.</p> 
+                </div>
+            </div>
+
+            <div class="informacion2">
+                <img src="Imagenes/sv05-banner.png" width="250px"  height="150px">
+                <div class="a2">
+                    <p>Los pokemons tipo electrico descargan con sus rayos</p>
+                </div>
+            </div>
+
+            <div class="informacion3">
+                    <img src="Imagenes/mabosstiff-ex-box-169-es.png" height="150px" width="300px">
+                    <div class="a3">
+                        <h3>Colecciona como un jefazo.... con Mabosstiff ex</h3>
+                    </div>
+            </div>
+
+            <div class="informacion4">
+                <img src="Imagenes/pokemon-go-169.png" height="200px" width="200px">
+                <div class="a4">
+                    <p>Los pokemons de tipo hada deslumbran en Pokemon Go</p>
+                </div>
+            </div>
+
+            <div class="informacion5">
+                <img src="Imagenes/sv045-preview-cards-1-169-es.png" height="200px" width="200">
+                <div class="a5">
+                    <p>Nuevas cartas de Escarlata y Púrpura Destinos de Paldea </p>
+                </div>
+            </div>
+
+            <div class="container1">
+
+                <div class="informacion6">
+                    <img src="Imagenes/pokemon-go-169 (1).png" height="300px" width="300px">
+                    <div class="a6">
+                        <h3>La explosion de Typhlosion de Hisui</h3>
+                        <p>La cosa está que arde con el debut de Typholosion de Hisui en Pokémon GO deurante el primer Día de Incursiones de 2024</p>
+                    </div>
+                </div>
+
+                <div class="informacion7">
+                    <img src="Imagenes/pokemon-masters-ex-169.png" height="300px" width="300px">
+                    <div class="a7">
+                        <h3>¡Khé-NigmaTV emitiendo en vivo y en directo desde Passio!</h3>
+                        <p>La nueva pareja de compis e-Nigma y Bellibolt comienza su llegada a Pokémon Masters EX</p>
+                    </div>
+                </div>
+
+                <div class="informacion8">
+                    <img src="Imagenes/2024-tcg-rotation-169-es.png" height="300px" width="300px">
+                    <div class="a8">
+                        <h3>Anuncio de la rotacion del formato Estándar de JCC Pokémon en 2024</h3>
+                        <p>La rotación del formato Estándar en el juego competitivo de 2024 entrará en vigor el 5 de abril de 2024</p>
+                    </div>
+                </div>
+
+
+                <div class="largo-izq1"></div>
+                <div class="largo-der1"></div>
 
             </div>
-        </div>
+            <div id="conteItemsCarrusel">
+                <div class="itemCarrusel" id="itemCarrusel-1">
+                    <div class="tarjetaCarrusel" id="tarjetaCarrusel-1">
+                        A
+                    </div>
+                    <div class="flechasCarrusel">
+                        <a href="#itemCarrusel-3">
+                            <i>I</i>
+                        </a>
+                        <a href="#itemCarrusel-2">
+                            <i>D</i>
+                        </a>
+                    </div>
+                </div>
 
-        <div class="informacion4">
-            <img src="">
-            <div class="a4">
+                <div class="itemCarrusel" id="itemCarrusel-2">
+                    <div class="tarjetaCarrusel" id="tarjetaCarrusel-2">
+                        B
+                    </div>
+                    <div class="flechasCarrusel">
+                        <a href="#itemCarrusel-1">
+                            <i>I</i>
+                        </a>
+                        <a href="#itemCarrusel-3">
+                            <i>D</i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="itemCarrusel" id="itemCarrusel-3">
+                    <div class="tarjetaCarrusel" id="tarjetaCarrusel-3">
+                        C
+                    </div>
+                    <div class="flechasCarrusel">
+                        <a href="#itemCarrusel-2">
+                            <i>I</i>
+                        </a>
+                        <a href="#itemCarrusel-1">
+                            <i>D</i>
+                        </a>
+                    </div>
+                </div>
 
             </div>
+    
+
         </div>
-
-        <div class="informacion5">
-            <img src="Imagenes/pokemon-sleep-169.png">
-            <div class="a5">
-
-            </div>
-        </div>
-
-        <div class="informacion6">
-            <img src="Imagenes/mabosstiff-ex-box-169-es.png" height="150px" width="300px">
-            <div class="a6">
-                <h3>Colecciona como un jefazo.... con Mabosstiff ex</h3>
-            </div>
-        </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     </body> 
-    </div>
 
 </html>
